# pandas-weights

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pandas_weights/: __init__.py  _stats.py  accessor.py  base.py  frame.py  series.py  typing_.py
tests/: test_base.py  test_frame.py  test_series.py
