[project]
name = "pandas-weights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nachomaiz", email = "ignacio.maiz@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "pandas[pyarrow]>=2.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.31",
    "mypy>=1.18.2",
    "pandas-stubs>=2.0",
]
test = [
    "coverage>=7.11.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
