[project]
name = "pandas-weights"
version = "0.1.0"
description = "Weighted aggregations with pandas"
readme = "README.md"
authors = [
    { name = "nachomaiz", email = "ignacio.maiz@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
demo = [
    "ipykernel>=6.31.0",
]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.0",
]
test = [
    "coverage>=6.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
]
